added screenshots, and fixed readme

--- a/Tutorial_notebook.ipynb
+++ b/Tutorial_notebook.ipynb
@@ -8,6 +8,9 @@
     "\n",
     "This tutorial demonstrates how to capture and analyze user feedback for LLM applications using Phoenix's tracing and annotation capabilities. We'll build a social media post generator that allows users to provide feedback on generated content.\n",
     "\n",
+    "Note: A complete implementation with a Gradio-based user interface is available in 'social_media_post_generator.py'. \n",
+    "This notebook focuses on the core concepts and step-by-step explanation.\n",
+    "\n",
     "## Overview\n",
     "1. Set up Phoenix and OpenAI\n",
     "2. Create a post generator function\n",
@@ -73,7 +76,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "🔑 Enter your OpenAI API key:  ········\n"
